Elaborate on deployment.

--- a/README.mkd
+++ b/README.mkd
@@ -12,14 +12,26 @@ interface runs under [Ocsigen][ocsigen].
 
 See the [Ocsigen manual][ocsigen] for how to setup up the web server.  A
 sample configuration for Batyr is installed under `$prefix/share/batyr`.
-Create a PostgreSQL database which can be accessed by the user running the
-Ocsigen server, and prepare it with
+Create a PostgreSQL database, say [batyr], which can be accessed by the user
+running the Ocsigen server, and prepare it with
 
-    psql -U ocsigen -f $prefix/share/batyr/schemas/batyr_base.sql
-    psql -U ocsigen -f $prefix/share/batyr/schemas/batyr_proc.sql
+    psql -U batyr batyr -f $prefix/share/batyr/schemas/batyr_base.sql
+    psql -U batyr batyr -f $prefix/share/batyr/schemas/batyr_proc.sql
 
-The first contains the table definitions.  The second contains views and
-functions which can be updated without touching any data.
+The first file contains the table definitions.  The second contains views
+and functions which can be updated without touching any data.  Then point to
+this database in the configuration file [/etc/batyr/batyr.conf]:
+```
+(* Caqti URI for connecting to database. *)
+db_uri = "postgresql://batyr@db-host/batyr"
+
+admin = {
+  (* Hide the account passwords in the admin interface. *)
+  hide_passwords = true
+}
+```
+A database URI [postgresql:/] would give you the ident-authenticated default
+database.
 
 [ocsigen]: http://ocsigen.org/ocsigenserver/
 [pgenv]: http://www.postgresql.org/docs/9.3/interactive/libpq-envars.html
